# ocr-ai

./: .gitignore  Cargo.toml  README.md
contours/: Cargo.toml
contours/src/: main.rs
extract-data/: Cargo.toml
extract-data/src/: main.rs
image-depth/: Cargo.toml
image-depth/src/: main.rs
ocr/: Cargo.toml
ocr/src/: main.rs
position-data/: Cargo.toml
position-data/src/: main.rs
sentences/: Cargo.toml
sentences/src/: main.rs
tesseract/: Cargo.toml
tesseract/src/: main.rs
trocr/: Cargo.toml  readme.md
trocr/src/: audio.rs  image_processor.rs  imagenet.rs  lib.rs  main.rs
